# StormForge

./: .gitattributes  .gitignore  AndroidBuild.cmd  CMakeAndroidBuild.cmd  CMakeAndroidGen.cmd  CMakeGenScripts.sh  CMakeLinuxBuild.sh  CMakeLinuxGen.sh  CMakeLists.txt  CMakeWinBuild.cmd  CMakeWinBuild3rdParties.cmd  CMakeWinGen.cmd  CMakeWinGen3rdParties.cmd  GitLFSFetch.cmd  GitPullAll.cmd  GitPushAll.cmd  KillVSGhostProcess.cmd  LinuxBuild.sh  LinuxGen.sh  ProjectRoot.txt  README.md  Setup.cmd  Setup.sh  SetupSDKPath.cmd  StormForge.cmake  StormForge.sln  StormForge3rdParties.sln  StormForgeTest.sln  StormForgeTools.sln  StormForge_Linux.sln  WinBuild.cmd  WinGen.cmd  build.sh  buildPreEngineData.cmd  cleanPreEngineData.cmd  download_dependencies.ps1  download_dependencies.sh  setup_prerequisites.sh
3rdParties/: 0build.sh  0gen.sh  AndroidBuild.cmd  AndroidGen.cmd  CMakeLists.txt  FindVC.cmd  LinuxBuild.sh  LinuxGen.sh  LinuxGenNBuild.sh  Win0Build.cmd  Win0Gen.cmd  WinBuild.cmd  WinBuildMain.cmd  WinGen.cmd  WinGenMain.cmd  WinGenNBuild.cmd  WinGenNBuild.ps1
3rdParties/src/DevIL/: makefile
3rdParties/src/PlayFab/: CMakeLists.txt
3rdParties/src/SFWinport/: CMakeLists.txt
3rdParties/src/avro/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/curl/: CMakeLists.txt  curl_config.h  download.cmd  download.sh
3rdParties/src/flatbuffer/: MSVCStatic.patch  download.cmd  download.sh
3rdParties/src/freetype/: CMakeLists.txt  makefile
3rdParties/src/gtest/: CMakeLists.txt
3rdParties/src/janson/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/jansson/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/jasper/: CMakeLists.txt  makefile
3rdParties/src/jpeg/: CMakeLists.txt  makefile
3rdParties/src/jsoncpp/: CMakeLists.txt
3rdParties/src/lcms/: CMakeLists.txt  makefile
3rdParties/src/libevent/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/libiconv/: CMakeLists.txt  config.h
3rdParties/src/libmng/: CMakeLists.txt  makefile
3rdParties/src/libpng/: CMakeLists.txt  makefile
3rdParties/src/libtiff/: CMakeLists.txt  makefile  tif_config.h
3rdParties/src/libuv/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/libwebsocket/: download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/libxml/: CMakeLists.txt  libxmlconfig.h  makefile
3rdParties/src/llvm/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/lzma/: CMakeLists.txt  download.cmd  download.sh  xz_config.h
3rdParties/src/mbedtls/: CMakeLists.txt
3rdParties/src/memcached/: CMakeLists.txt  download.cmd  download.sh
3rdParties/src/mongoc/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh
3rdParties/src/mysql/: CMakeLists.txt  Readme.txt  WinBuild.cmd  WinGen.cmd  build.sh  download.cmd  generate.sh  setup_linux.sh  setup_ubuntu.sh
3rdParties/src/nasm/: buildNASM.cmd
3rdParties/src/openssl/: build1.1.cmd  build1.1.sh  build1.1_AndroidARM.sh  build1.1_AndroidARM64.sh  build1.1_Winx32.cmd  build1.1_Winx64.cmd  clean.cmd  clean_Winx32.cmd  clean_Winx64.cmd  config1.1_Winx64.cmd  rebuild.cmd
3rdParties/src/rdkafka/: CMakeLists.txt  rdkafka_config.h
3rdParties/src/tinyxml/: CMakeLists.txt  makefile
3rdParties/src/ws/: build.cmd  build.sh  download.cmd  download.sh  gen.cmd  gen.sh  genTest.cmd
3rdParties/src/yaml/: CMakeLists.txt  yaml_config.h
3rdParties/src/zlib/: CMakeLists.txt  makefile
3rdParties/src/zookeeper/: CMakeLists.txt  Readme.txt
3rdParties/tool/: BuildTool.sln  buildTool.cmd  makefile
3rdParties/tool/CreatePath/: CreatePath.csproj  Program.cs  makefile
3rdParties/tool/ToolLib/: PathTool.cs  ToolEnvironment.cs
3rdParties/tool/copyfile/: Program.cs  copyfile.csproj  makefile
3rdParties/tool/httpget/: Program.cs  httpget.csproj  makefile
3rdParties/tool/shellbridge/: Program.cs  makefile  shellbridge.csproj
3rdParties/tool/toolLib/: PathTool.cs  ToolEnvironment.cs  makefile  toolLib.csproj
3rdParties/vcpkg_patch/openal-soft/: createpatch.sh  disable-debugger-logging.patch
Engine/Src/Protocol/: CMakeList.in  CMakeLists.txt  SFGenericMessageClass.cpp  SFGenericMessageClass.h  SFProtocol.Android.vcxproj  SFProtocol.IOS.vcxproj  SFProtocol.Linux.vcxproj  SFProtocol.Win.vcxproj  SFProtocol.Win.vcxproj.filters  SFProtocol.cpp  SFProtocol.h  SFProtocol.vcxitems  SFProtocol.vcxitems.filters  SFProtocolHelper.h  SFProtocolPCH.cpp  SFProtocolPCH.h  pch.h  protocol.props
Engine/Src/SFCore/: CMakeList.in  CMakeLists.txt  SFAssert.h  SFCore.Android.vcxproj  SFCore.Win.vcxproj  SFCore.Win.vcxproj.filters  SFCore.vcxitems  SFCore.vcxitems.filters  SFCorePCH.cpp  SFCorePCH.h  SFNetAddress.cpp  SFNetAddress.h  SFResult.cpp  SFResult.h  SFScopeContext.h  SFTypedefs.cpp  SFTypedefs.h  SFTypedefs.inl  pch.h
Engine/Src/SFCoreSharp/: CMakeLists.txt  ObjectInformation.cs  SFArrayObject.cs  SFConnection.cs  SFCoreSharp.csproj  SFEndpoint.cs  SFFlatByteArrayAllocator.cs  SFGameTypes.cs  SFIMessageRouter.cs  SFLog.cs  SFMessage.cs  SFMessageHeader.cs  SFMessageID.cs  SFMessageParsingUtil.cs  SFMessageRouter.cs  SFObject.cs  SFOnlineTransaction.cs  SFResult.cs  SFStringCrc32.cs  SFStringCrc64.cs  SFStringCrcDB.cs  SFTimeSpan.cs  SFTimeUtil.cs  SFTypeSerialization.cs  SFUtil.cs
Engine/Src/SFEngine/: CMakeList.in  CMakeLists.txt  SFEngine.Android.cpp  SFEngine.Android.vcxproj  SFEngine.Android.vcxproj.filters  SFEngine.IOS.cpp  SFEngine.IOS.vcxproj  SFEngine.Linux.cpp  SFEngine.Linux.vcxproj  SFEngine.Win.cpp  SFEngine.Win.vcxproj  SFEngine.Win.vcxproj.filters  SFEngine.cpp  SFEngine.h  SFEngine.vcxitems  SFEngine.vcxitems.filters  SFEnginePCH.cpp  SFEnginePCH.h  StormForge.natvis
Engine/Src/SFEngineDLL/: CMakeList.in  CMakeLists.txt  SFEngineDLL.Android.vcxproj  SFEngineDLL.Android.vcxproj.filters  SFEngineDLL.Sharp.csproj  SFEngineDLL.Win.vcxproj  SFEngineDLL.Win.vcxproj.filters  SFEngineDLLFileList.cmake  SFEngineDLLPCH.cpp  SFEngineDLLPCH.h  pch.h
Test/: CMakeLists.txt
(+2751 files in other folders)
